tests/NormalTests/paczka1/fuzzy1/97400338.err
Error in line 1: A449 A896 41,5
Error in line 2: A449 S475 75,1
Error in line 12: A449 A896 80,2
Error in line 26: A449 S475 13,3
